--- a/Comment Tree/Base.lproj/Main.storyboard
+++ b/Comment Tree/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--Table View Controller-->
         <scene sceneID="aRx-8F-hs8">
             <objects>
                 <viewController id="6W1-r1-8xn" customClass="TableViewController" customModule="Comment_Tree" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h0c-zr-x9N">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="54" width="375" height="613"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -46,23 +46,29 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trees" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HL3-F7-pan">
+                                <rect key="frame" x="0.0" y="20" width="375" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="gaf-BG-1g2"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="jHj-NP-lB2"/>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="jHj-NP-lB2"/>
                     <connections>
                         <outlet property="tableView" destination="h0c-zr-x9N" id="Zsr-Lf-roQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="94i-5N-AFG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2177" y="-37"/>
+            <point key="canvasLocation" x="-2178.4000000000001" y="-37.331334332833585"/>
         </scene>
-        <!--Item 1-->
+        <!--Home-->
         <scene sceneID="ztf-gK-wAk">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vqu-fb-dsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="myF-Ab-Sn4" customClass="HomeViewController" customModule="Comment_Tree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kLD-bE-NHv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -72,13 +78,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Make A Tree" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3f-z0-beV">
-                                        <rect key="frame" x="87" y="282" width="201" height="40"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Make a Tree" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3f-z0-beV">
+                                        <rect key="frame" x="114" y="272" width="146" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="title logo" translatesAutoresizingMaskIntoConstraints="NO" id="GKg-VD-WY8">
+                                        <rect key="frame" x="42" y="67" width="291" height="81"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ORS-7Z-IZk">
                                         <rect key="frame" x="112" y="248" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -87,13 +97,6 @@
                                             <segue destination="uih-Na-0FI" kind="show" identifier="makeTree" id="5XI-ip-Mm9"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Comment Tree" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CPt-9o-Deg">
-                                        <rect key="frame" x="16" y="78" width="343" height="64"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="19"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <viewLayoutGuide key="safeArea" id="7OS-va-Tt8"/>
@@ -102,10 +105,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="OZ0-Gq-ctd"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="VCE-b7-Vj9"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="home" id="VCE-b7-Vj9"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vqu-fb-dsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2927" y="-22"/>
+            <point key="canvasLocation" x="-2914.4000000000001" y="-37.331334332833585"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="DAv-li-DFb">
@@ -123,7 +127,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zMu-Ja-Aqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2487" y="-810"/>
+            <point key="canvasLocation" x="-2546" y="-812"/>
         </scene>
         <!--Tree View Controller-->
         <scene sceneID="idv-0F-4XO">
@@ -147,7 +151,6 @@
                     </view>
                     <connections>
                         <outlet property="backButton" destination="5pC-WD-ecE" id="lCK-vP-gs4"/>
-                        <segue destination="6W1-r1-8xn" kind="show" identifier="backToTable" id="eHp-8X-k7i"/>
                         <segue destination="11E-bF-vp5" kind="show" identifier="backToNav" id="9H8-fx-t1N"/>
                     </connections>
                 </viewController>
@@ -157,10 +160,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="home" width="34" height="34"/>
         <image name="icon-png" width="512" height="520"/>
+        <image name="title logo" width="1022" height="286"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="KLb-ie-aNX"/>
-        <segue reference="eHp-8X-k7i"/>
+        <segue reference="5XI-ip-Mm9"/>
     </inferredMetricsTieBreakers>
 </document>
